# social-app-fastapi-sqlalchemy

./: .gitignore  pyproject.toml  settings.example.json
social_app_fastapi_sqlalchemy/: backends.py  decorators.py  main.py  settings.py  storage.py  strategy.py  utils.py
