[tool.poetry]
name = "social-app-fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Tyler Morgan <digismack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
black = "^21.9b0"
flake8 = "^4.0.1"
social-auth-core = "^4.1.0"
isort = "^5.9.3"
social-auth-storage-sqlalchemy = "^1.1.0"
python-multipart = "^0.0.5"
python3-saml = "^1.12.0"
itsdangerous = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "social_app_fastapi_sqlalchemy.main:start"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
